...
            .toolbar {
                ToolbarItem(placement: .cancellationAction) {
                    Button(TextosDoSuporte.fechar) {
                        dismiss()
                    }
                    .accessibilityShowsLargeContentViewer()
                    .accessibilityIdentifier("botao-fechar-suporte")
                }
            }
            .sheet(isPresented: $viewModel.mostrandoCompositorNativo) {
                CompositorDeEmailNativo(
                    destinatarios: [viewModel.emailDestino],
                    assunto: viewModel.assuntoEmail,
...
